[package]
name = "redis-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
cityhasher = "0.1.0"
rand = "0.9.0"
ansi_term = "0.12.1"
lzf = "1.0.0"
bytes = "1.10.1"
atoi = "2.0.0"
tokio = {version = "1.45.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.0"
json_comments = "0.2.2"
serde_json = "1.0.140"
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7.5.4"
